finalizando archivos generales (#1698)
* finalizando archivos generales

bugs.po, license.po, y glossary.po

* Apply suggestions from code review

Co-authored-by: Carlos A. Crespo <lvccrespo@gmail.com>

* deshacer seccion borrada

* Apply suggestions from code review

Co-authored-by: rtobar <rtobar@icrar.org>

* powrap

Co-authored-by: Carlos A. Crespo <lvccrespo@gmail.com>
Co-authored-by: rtobar <rtobar@icrar.org>

--- a/glossary.po
+++ b/glossary.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
 "PO-Revision-Date: 2021-08-04 11:03+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../Doc/glossary.rst:5
@@ -141,14 +141,15 @@ msgstr ""
 "clases y funciones, respectivamente."
 
 #: ../Doc/glossary.rst:58
-#, fuzzy
 msgid ""
 "See :term:`variable annotation`, :term:`function annotation`, :pep:`484` "
 "and :pep:`526`, which describe this functionality. Also see :ref:"
 "`annotations-howto` for best practices on working with annotations."
 msgstr ""
-"Vea :term:`variable annotation`, :term:`function annotation`, :pep:`484` y :"
-"pep:`526`, los cuales describen esta funcionalidad."
+"Consulte :term:`variable annotation`, :term:`function annotation`, :pep:"
+"`484` y :pep:`526`, que describen esta funcionalidad. Consulte también :ref:"
+"`annotations-howto` para conocer las mejores prácticas sobre cómo trabajar "
+"con anotaciones."
 
 #: ../Doc/glossary.rst:62
 msgid "argument"
@@ -394,7 +395,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:162
 msgid "borrowed reference"
-msgstr ""
+msgstr "referencia prestada"
 
 #: ../Doc/glossary.rst:164
 msgid ""
@@ -403,6 +404,11 @@ msgid ""
 "object is destroyed. For example, a garbage collection can remove the last :"
 "term:`strong reference` to the object and so destroy it."
 msgstr ""
+"En la API C de Python, una referencia prestada es una referencia a un "
+"objeto. No modifica el recuento de referencias de objetos. Se convierte en "
+"un puntero colgante si se destruye el objeto. Por ejemplo, una recolección "
+"de basura puede eliminar el último :term:`strong reference` del objeto y así "
+"destruirlo."
 
 #: ../Doc/glossary.rst:169
 msgid ""
@@ -412,6 +418,12 @@ msgid ""
 "func:`Py_NewRef` function can be used to create a new :term:`strong "
 "reference`."
 msgstr ""
+"Se recomienda llamar a :c:func:`Py_INCREF` en la :term:`referencia prestada "
+"<borrowed reference>` para convertirla en una :term:`referencia fuerte "
+"<strong reference>` in situ, excepto cuando el objeto no se puede destruir "
+"antes del último uso de la referencia prestada. La función :c:func:"
+"`Py_NewRef` se puede utilizar para crear una nueva :term:`referencia fuerte "
+"<strong reference>`."
 
 #: ../Doc/glossary.rst:174
 msgid "bytes-like object"
@@ -951,13 +963,15 @@ msgstr "Un sinónimo de :term:`file object`."
 
 #: ../Doc/glossary.rst:402
 msgid "filesystem encoding and error handler"
-msgstr ""
+msgstr "codificación del sistema de archivos y manejador de errores"
 
 #: ../Doc/glossary.rst:404
 msgid ""
 "Encoding and error handler used by Python to decode bytes from the operating "
 "system and encode Unicode to the operating system."
 msgstr ""
+"Controlador de errores y codificación utilizado por Python para decodificar "
+"bytes del sistema operativo y codificar Unicode en el sistema operativo."
 
 #: ../Doc/glossary.rst:407
 msgid ""
@@ -965,6 +979,10 @@ msgid ""
 "below 128. If the file system encoding fails to provide this guarantee, API "
 "functions can raise :exc:`UnicodeError`."
 msgstr ""
+"La codificación del sistema de archivos debe garantizar la decodificación "
+"exitosa de todos los bytes por debajo de 128. Si la codificación del sistema "
+"de archivos no proporciona esta garantía, las funciones de API pueden "
+"lanzar :exc:`UnicodeError`."
 
 #: ../Doc/glossary.rst:411
 msgid ""
@@ -972,6 +990,9 @@ msgid ""
 "getfilesystemencodeerrors` functions can be used to get the filesystem "
 "encoding and error handler."
 msgstr ""
+"Las funciones :func:`sys.getfilesystemencoding` y :func:`sys."
+"getfilesystemencodeerrors` se pueden utilizar para obtener la codificación "
+"del sistema de archivos y el controlador de errores."
 
 #: ../Doc/glossary.rst:415
 msgid ""
@@ -980,11 +1001,15 @@ msgid ""
 "filesystem_encoding` and :c:member:`~PyConfig.filesystem_errors` members of :"
 "c:type:`PyConfig`."
 msgstr ""
+"La :term:`codificación del sistema de archivos y el manejador de errores "
+"<filesystem encoding and error handler>` se configuran al inicio de Python "
+"mediante la función :c:func:`PyConfig_Read`: consulte los miembros :c:member:"
+"`~PyConfig.filesystem_encoding` y :c:member:`~PyConfig.filesystem_errors` "
+"de :c:type:`PyConfig`."
 
 #: ../Doc/glossary.rst:420
-#, fuzzy
-msgid "See also the :term:`locale encoding`."
-msgstr "Vea también :term:`package`."
+msgid "See also the :term:`locale encoding`"
+msgstr "Vea también :term:`locale encoding`"
 
 #: ../Doc/glossary.rst:421
 msgid "finder"
@@ -1074,14 +1099,14 @@ msgstr ""
 "ref:`function`."
 
 #: ../Doc/glossary.rst:458
-#, fuzzy
 msgid ""
 "See :term:`variable annotation` and :pep:`484`, which describe this "
 "functionality. Also see :ref:`annotations-howto` for best practices on "
 "working with annotations."
 msgstr ""
-"Vea :term:`variable annotation` y :pep:`484`, que describen esta "
-"funcionalidad."
+"Consulte :term:`variable annotation` y :pep:`484`, que describen esta "
+"funcionalidad. Consulte también :ref:`annotations-howto` para conocer las "
+"mejores prácticas sobre cómo trabajar con anotaciones."
 
 #: ../Doc/glossary.rst:462
 msgid "__future__"
@@ -1097,6 +1122,13 @@ msgid ""
 "feature was first added to the language and when it will (or did) become the "
 "default::"
 msgstr ""
+"Un :ref:`future statement <future>`, ``from __future__ import <feature>``, "
+"indica al compilador que compile el módulo actual utilizando una sintaxis o "
+"semántica que se convertirá en estándar en una versión futura de Python. El "
+"módulo :mod:`__future__` documenta los posibles valores de *feature*. Al "
+"importar este módulo y evaluar sus variables, puede ver cuándo se agregó por "
+"primera vez una nueva característica al lenguaje y cuándo se convertirá (o "
+"se convirtió) en la predeterminada:"
 
 #: ../Doc/glossary.rst:475
 msgid "garbage collection"
@@ -1666,31 +1698,36 @@ msgstr ""
 "usando bloqueos o empleando el método EAFP."
 
 #: ../Doc/glossary.rst:711
-#, fuzzy
 msgid "locale encoding"
-msgstr "codificación de texto"
+msgstr "codificación de la configuración regional"
 
 #: ../Doc/glossary.rst:713
 msgid ""
 "On Unix, it is the encoding of the LC_CTYPE locale. It can be set with "
 "``locale.setlocale(locale.LC_CTYPE, new_locale)``."
 msgstr ""
+"En Unix, es la codificación de la configuración regional LC_CTYPE. Se puede "
+"configurar con ``locale.setlocale(locale.LC_CTYPE, new_locale)``."
 
 #: ../Doc/glossary.rst:716
 msgid "On Windows, it is the ANSI code page (ex: ``cp1252``)."
-msgstr ""
+msgstr "En Windows, es la página de códigos ANSI (por ejemplo, ``cp1252``)."
 
 #: ../Doc/glossary.rst:718
 msgid ""
 "``locale.getpreferredencoding(False)`` can be used to get the locale "
 "encoding."
 msgstr ""
+"``locale.getpreferredencoding(False)`` se puede utilizar para obtener la "
+"codificación de la configuración regional."
 
 #: ../Doc/glossary.rst:721
 msgid ""
 "Python uses the :term:`filesystem encoding and error handler` to convert "
 "between Unicode filenames and bytes filenames."
 msgstr ""
+"Python usa el :term:`filesystem encoding and error handler` para convertir "
+"entre nombres de archivo Unicode y nombres de archivo en bytes."
 
 #: ../Doc/glossary.rst:723
 msgid "list"
@@ -2585,7 +2622,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:1119
 msgid "strong reference"
-msgstr ""
+msgstr "referencia fuerte"
 
 #: ../Doc/glossary.rst:1121
 msgid ""
@@ -2593,6 +2630,9 @@ msgid ""
 "increments the object's reference count when it is created and decrements "
 "the object's reference count when it is deleted."
 msgstr ""
+"En la API C de Python, una referencia fuerte es una referencia a un objeto "
+"que incrementa el recuento de referencias del objeto cuando se crea y "
+"disminuye el recuento de referencias del objeto cuando se elimina."
 
 #: ../Doc/glossary.rst:1125
 msgid ""
@@ -2601,11 +2641,14 @@ msgid ""
 "strong reference before exiting the scope of the strong reference, to avoid "
 "leaking one reference."
 msgstr ""
+"La función :c:func:`Py_NewRef` se puede utilizar para crear una referencia "
+"fuerte a un objeto. Por lo general, se debe llamar a la función :c:func:"
+"`Py_DECREF` en la referencia fuerte antes de salir del alcance de la "
+"referencia fuerte, para evitar filtrar una referencia."
 
 #: ../Doc/glossary.rst:1130
-#, fuzzy
 msgid "See also :term:`borrowed reference`."
-msgstr "Vea también :term:`module`."
+msgstr "Consulte también :term:`borrowed reference`."
 
 #: ../Doc/glossary.rst:1131
 msgid "text encoding"
@@ -2781,14 +2824,14 @@ msgstr ""
 "`annassign`."
 
 #: ../Doc/glossary.rst:1217
-#, fuzzy
 msgid ""
 "See :term:`function annotation`, :pep:`484` and :pep:`526`, which describe "
 "this functionality. Also see :ref:`annotations-howto` for best practices on "
 "working with annotations."
 msgstr ""
-"Vea :term:`function annotation`, :pep:`484` y :pep:`526`, los cuales "
-"describen esta funcionalidad."
+"Consulte :term:`function annotation`, :pep:`484` y :pep:`526`, que describen "
+"esta funcionalidad. Consulte también :ref:`annotations-howto` para conocer "
+"las mejores prácticas sobre cómo trabajar con anotaciones."
 
 #: ../Doc/glossary.rst:1221
 msgid "virtual environment"
