--- a/license.po
+++ b/license.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
 "PO-Revision-Date: 2021-08-04 11:18+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../Doc/license.rst:7
@@ -441,7 +441,6 @@ msgid "OpenSSL"
 msgstr "OpenSSL"
 
 #: ../Doc/license.rst:656
-#, fuzzy
 msgid ""
 "The modules :mod:`hashlib`, :mod:`posix`, :mod:`ssl`, :mod:`crypt` use the "
 "OpenSSL library for added performance if made available by the operating "
@@ -449,9 +448,9 @@ msgid ""
 "include a copy of the OpenSSL libraries, so we include a copy of the OpenSSL "
 "license here::"
 msgstr ""
-"Los módulos :mod:`hashlib`, :mod:`posix`, :mod:`ssl`, :mod:`crypt` usan la "
-"biblioteca OpenSSL para un mayor rendimiento si el sistema operativo los "
-"pone a disposición. Además, los instaladores de Windows y Mac OS X para "
+"Los módulos :mod:`hashlib`, :mod:`posix`, :mod:`ssl`, :mod:`crypt` utilizan "
+"la biblioteca OpenSSL para un rendimiento adicional si el sistema operativo "
+"la pone a disposición. Además, los instaladores de Windows y macOS para "
 "Python pueden incluir una copia de las bibliotecas de OpenSSL, por lo que "
 "incluimos una copia de la licencia de OpenSSL aquí::"
 
@@ -525,83 +524,12 @@ msgid "W3C C14N test suite"
 msgstr "Conjunto de pruebas W3C C14N"
 
 #: ../Doc/license.rst:955
-#, fuzzy
 msgid ""
 "The C14N 2.0 test suite in the :mod:`test` package (``Lib/test/xmltestdata/"
 "c14n-20/``) was retrieved from the W3C website at https://www.w3.org/TR/xml-"
 "c14n2-testcases/ and is distributed under the 3-clause BSD license::"
 msgstr ""
 "El conjunto de pruebas C14N 2.0 en el paquete :mod:`test` (``Lib/test/"
-"xmltestdata/c14n-20/``) se recuperó del sitio web del W3C en https://www.w3."
-"org/TR/xml-c14n2-testcases / y se distribuye bajo la licencia BSD de 3 "
+"xmltestdata/c14n-20/``) se recuperó del sitio web de W3C en https://www.w3."
+"org/TR/xml-c14n2-testcases/ y se distribuye bajo la licencia BSD de 3 "
 "cláusulas:"
-
-#~ msgid ""
-#~ "Copyright (c) 2013 W3C(R) (MIT, ERCIM, Keio, Beihang), All Rights "
-#~ "Reserved."
-#~ msgstr ""
-#~ "Copyright (c) 2013 W3C (R) (MIT, ERCIM, Keio, Beihang), Todos los "
-#~ "derechos reservados."
-
-#~ msgid ""
-#~ "Redistribution and use in source and binary forms, with or without "
-#~ "modification, are permitted provided that the following conditions are "
-#~ "met:"
-#~ msgstr ""
-#~ "La redistribución y el uso en formato fuente y binario, con o sin "
-#~ "modificaciones, están permitidos siempre que se cumplan las siguientes "
-#~ "condiciones:"
-
-#~ msgid ""
-#~ "Redistributions of works must retain the original copyright notice, this "
-#~ "list of conditions and the following disclaimer."
-#~ msgstr ""
-#~ "Las redistribuciones de obras deben conservar el aviso de copyright "
-#~ "original, esta lista de condiciones y el siguiente descargo de "
-#~ "responsabilidad."
-
-#~ msgid ""
-#~ "Redistributions in binary form must reproduce the original copyright "
-#~ "notice, this list of conditions and the following disclaimer in the "
-#~ "documentation and/or other materials provided with the distribution."
-#~ msgstr ""
-#~ "Las redistribuciones en formato binario deben reproducir el aviso de "
-#~ "derechos de autor original, esta lista de condiciones y el siguiente "
-#~ "descargo de responsabilidad en la documentación u otros materiales "
-#~ "proporcionados con la distribución."
-
-#~ msgid ""
-#~ "Neither the name of the W3C nor the names of its contributors may be used "
-#~ "to endorse or promote products derived from this work without specific "
-#~ "prior written permission."
-#~ msgstr ""
-#~ "Ni el nombre del W3C ni los nombres de sus colaboradores pueden usarse "
-#~ "para respaldar o promover productos derivados de este trabajo sin un "
-#~ "permiso previo específico por escrito."
-
-#~ msgid ""
-#~ "THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS \"AS "
-#~ "IS\" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED "
-#~ "TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A "
-#~ "PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER "
-#~ "OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, "
-#~ "EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, "
-#~ "PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR "
-#~ "PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF "
-#~ "LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING "
-#~ "NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS "
-#~ "SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE."
-#~ msgstr ""
-#~ "ESTE SOFTWARE ES PROPORCIONADO POR LOS TITULARES DE LOS DERECHOS DE AUTOR "
-#~ "Y COLABORADORES \"TAL CUAL\" Y CUALQUIER GARANTÍA EXPRESA O IMPLÍCITA, "
-#~ "INCLUYENDO, PERO NO LIMITADO A, LAS GARANTÍAS IMPLÍCITAS DE "
-#~ "COMERCIABILIDAD E IDONEIDAD PARA UN PROPÓSITO DETERMINADO ESTÁN "
-#~ "RENUNCIADAS. EN NINGÚN CASO EL PROPIETARIO DE LOS DERECHOS DE AUTOR O LOS "
-#~ "COLABORADORES SERÁN RESPONSABLES DE CUALQUIER DAÑO DIRECTO, INDIRECTO, "
-#~ "INCIDENTAL, ESPECIAL, EJEMPLAR O CONSECUENTE (INCLUYENDO, PERO NO "
-#~ "LIMITADO A, LA ADQUISICIÓN DE BIENES O SERVICIOS SUSTITUTOS; PÉRDIDA DE "
-#~ "USO, DATOS O BENEFICIOS; O INTERRUPCIÓN COMERCIAL) SIN EMBARGO Y EN "
-#~ "CUALQUIER TEORÍA DE RESPONSABILIDAD, YA SEA POR CONTRATO, RESPONSABILIDAD "
-#~ "ESTRICTA O AGRAVIO (INCLUYENDO NEGLIGENCIA O DE OTRA MANERA) QUE SURJA DE "
-#~ "CUALQUIER FORMA DEL USO DE ESTE SOFTWARE, AUNQUE SE INDIQUE LA "
-#~ "POSIBILIDAD DE DICHO DAÑO."
