Apply suggestions from code review
Co-authored-by: rtobar <rtobar@icrar.org>

--- a/c-api/long.po
+++ b/c-api/long.po
@@ -181,8 +181,8 @@ msgid ""
 "instance of :c:type:`PyLongObject`, first call its :meth:`__index__` method "
 "(if present) to convert it to a :c:type:`PyLongObject`."
 msgstr ""
-"Devuelve una representación C :c:type:`long` de *obj*. Si *obj* no es una "
-"instancia de :c:type:`PyLongObject`, primero llame a su método :meth:"
+"Retorna una representación C :c:type:`long` de *obj*. Si *obj* no es una "
+"instancia de :c:type:`PyLongObject`, primero llama a su método :meth:"
 "`__index__` (si está presente) para convertirlo en un :c:type:`PyLongObject`."
 
 #: ../Doc/c-api/long.rst:122
@@ -232,7 +232,7 @@ msgid ""
 "instance of :c:type:`PyLongObject`, first call its :meth:`__index__` method "
 "(if present) to convert it to a :c:type:`PyLongObject`."
 msgstr ""
-"Devuelve una representación C :c:type:`long long` de *obj*. Si *obj* no es "
+"Retorna una representación C :c:type:`long long` de *obj*. Si *obj* no es "
 "una instancia de :c:type:`PyLongObject`, primero llame a su método :meth:"
 "`__index__` (si está presente) para convertirlo en un :c:type:`PyLongObject`."
 
@@ -358,7 +358,7 @@ msgid ""
 "an instance of :c:type:`PyLongObject`, first call its :meth:`__index__` "
 "method (if present) to convert it to a :c:type:`PyLongObject`."
 msgstr ""
-"Devuelve una representación C :c:type:`unsigned long` de *obj*. Si *obj* no "
+"Retorna una representación C :c:type:`unsigned long` de *obj*. Si *obj* no "
 "es una instancia de :c:type:`PyLongObject`, primero llame a su método :meth:"
 "`__index__` (si está presente) para convertirlo en un :c:type:`PyLongObject`."
 
@@ -384,7 +384,7 @@ msgid ""
 "is not an instance of :c:type:`PyLongObject`, first call its :meth:"
 "`__index__` method (if present) to convert it to a :c:type:`PyLongObject`."
 msgstr ""
-"Devuelve una representación C :c:type:`unsigned long long` de *obj*. Si "
+"Retorna una representación C :c:type:`unsigned long long` de *obj*. Si "
 "*obj* no es una instancia de :c:type:`PyLongObject`, primero llame a su "
 "método :meth:`__index__` (si está presente) para convertirlo en un :c:type:"
 "`PyLongObject`."
