--- a/c-api/code.po
+++ b/c-api/code.po
@@ -111,5 +111,5 @@ msgid ""
 "process-debuggers-and-profilers>`_."
 msgstr ""
 "Para iterar de manera eficiente sobre los números de línea en un objeto de "
-"código, use `the API described in PEP 626 <https://www.python.org/dev/peps/"
+"código, use `la API descrita en PEP 626 <https://www.python.org/dev/peps/"
 "pep-0626/#out-of-process-debuggers-and-profilers>`_."
