Apply suggestions from code review
Co-authored-by: rtobar <rtobar@icrar.org>

--- a/c-api/type.po
+++ b/c-api/type.po
@@ -169,8 +169,8 @@ msgstr ""
 "proporcionado no incluye el :const:`Py_TPFLAGS_HAVE_GC` en sus banderas, "
 "entonces el protocolo GC se implementará automáticamente desde sus padres. "
 "Por el contrario, si el tipo que se está creando incluye :const:"
-"`Py_TPFLAGS_HAVE_GC` en sus banderas, entonces **must** implementará el "
-"protocolo GC en sí mismo al implementar al menos el identificador :c:member:"
+"`Py_TPFLAGS_HAVE_GC` en sus banderas, entonces **debe** implementar el "
+"protocolo GC por sí mismo al implementar al menos el identificador :c:member:"
 "`~PyTypeObject.tp_traverse`."
 
 #: ../Doc/c-api/type.rst:111
@@ -268,7 +268,7 @@ msgid ""
 "Creates and returns a :ref:`heap type <heap-types>` from the *spec* (:const:"
 "`Py_TPFLAGS_HEAPTYPE`)."
 msgstr ""
-"Crea y retorna un :ref:`heap type <heap-types>` a partir del *spec* (:const:"
+"Crea y retorna un :ref:`tipo heap <heap-types>` a partir del *spec* (:const:"
 "`Py_TPFLAGS_HEAPTYPE`)."
 
 #: ../Doc/c-api/type.rst:168
@@ -281,7 +281,7 @@ msgid ""
 msgstr ""
 "El argumento *bases* se puede utilizar para especificar clases base; puede "
 "ser solo una clase o una tupla de clases. Si *bases* es ``NULL``, en su "
-"lugar se utiliza la ranura *Py_tp_bases*. Si eso también es ``NULL``, se usa "
+"lugar se utiliza la ranura *Py_tp_bases*. Si esa también es ``NULL``, se usa "
 "la ranura *Py_tp_base* en su lugar. Si también es ``NULL``, el nuevo tipo se "
 "deriva de :class:`object`."
 
