--- a/c-api/long.po
+++ b/c-api/long.po
@@ -384,9 +384,9 @@ msgid ""
 "is not an instance of :c:type:`PyLongObject`, first call its :meth:"
 "`__index__` method (if present) to convert it to a :c:type:`PyLongObject`."
 msgstr ""
-"Retorna una representación C :c:type:`unsigned long long` de *obj*. Si "
-"*obj* no es una instancia de :c:type:`PyLongObject`, primero llame a su "
-"método :meth:`__index__` (si está presente) para convertirlo en un :c:type:"
+"Retorna una representación C :c:type:`unsigned long long` de *obj*. Si *obj* "
+"no es una instancia de :c:type:`PyLongObject`, primero llame a su método :"
+"meth:`__index__` (si está presente) para convertirlo en un :c:type:"
 "`PyLongObject`."
 
 #: ../Doc/c-api/long.rst:288
