finalizando c-api/long (#1732)
* finalizando c-api/long

* Apply suggestions from code review

Co-authored-by: rtobar <rtobar@icrar.org>

* powrap

Co-authored-by: rtobar <rtobar@icrar.org>

--- a/c-api/long.po
+++ b/c-api/long.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
 "PO-Revision-Date: 2021-08-02 01:24+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../Doc/c-api/long.rst:6
@@ -176,16 +176,14 @@ msgstr ""
 "recuperar del valor resultante usando :c:func:`PyLong_AsVoidPtr`."
 
 #: ../Doc/c-api/long.rst:118 ../Doc/c-api/long.rst:136
-#, fuzzy
 msgid ""
 "Return a C :c:type:`long` representation of *obj*.  If *obj* is not an "
 "instance of :c:type:`PyLongObject`, first call its :meth:`__index__` method "
 "(if present) to convert it to a :c:type:`PyLongObject`."
 msgstr ""
-"Retorna una representación de C :c:type:`long` de *obj*. Si *obj* no es una "
+"Retorna una representación C :c:type:`long` de *obj*. Si *obj* no es una "
 "instancia de :c:type:`PyLongObject`, primero llama a su método :meth:"
-"`__index__` o :meth:`__int__` (si está presente) para convertirlo en un :c:"
-"type:`PyLongObject`."
+"`__index__` (si está presente) para convertirlo en un :c:type:`PyLongObject`."
 
 #: ../Doc/c-api/long.rst:122
 msgid ""
@@ -229,16 +227,14 @@ msgstr ""
 "``-1`` como de costumbre."
 
 #: ../Doc/c-api/long.rst:159 ../Doc/c-api/long.rst:177
-#, fuzzy
 msgid ""
 "Return a C :c:type:`long long` representation of *obj*.  If *obj* is not an "
 "instance of :c:type:`PyLongObject`, first call its :meth:`__index__` method "
 "(if present) to convert it to a :c:type:`PyLongObject`."
 msgstr ""
-"Retorna una representación de C :c:type:`long long` de *obj*. Si *obj* no es "
-"una instancia de :c:type:`PyLongObject`, primero llama a su método :meth:"
-"`__index__` o :meth:`__int__` (si está presente) para convertirlo en un :c:"
-"type:`PyLongObject`."
+"Retorna una representación C :c:type:`long long` de *obj*. Si *obj* no es "
+"una instancia de :c:type:`PyLongObject`, primero llame a su método :meth:"
+"`__index__` (si está presente) para convertirlo en un :c:type:`PyLongObject`."
 
 #: ../Doc/c-api/long.rst:163
 msgid ""
@@ -357,16 +353,14 @@ msgstr ""
 "`TypeError`."
 
 #: ../Doc/c-api/long.rst:264
-#, fuzzy
 msgid ""
 "Return a C :c:type:`unsigned long` representation of *obj*.  If *obj* is not "
 "an instance of :c:type:`PyLongObject`, first call its :meth:`__index__` "
 "method (if present) to convert it to a :c:type:`PyLongObject`."
 msgstr ""
-"Retorna una representación de C :c:type:`unsigned long` de *obj*. Si *obj* "
-"no es una instancia de :c:type:`PyLongObject`, primero llama a su método :"
-"meth:`__index__` o :meth:`__int__` (si está presente) para convertirlo en "
-"un :c:type:`PyLongObject`."
+"Retorna una representación C :c:type:`unsigned long` de *obj*. Si *obj* no "
+"es una instancia de :c:type:`PyLongObject`, primero llame a su método :meth:"
+"`__index__` (si está presente) para convertirlo en un :c:type:`PyLongObject`."
 
 #: ../Doc/c-api/long.rst:268
 msgid ""
@@ -385,16 +379,15 @@ msgstr ""
 "para desambiguar."
 
 #: ../Doc/c-api/long.rst:283
-#, fuzzy
 msgid ""
 "Return a C :c:type:`unsigned long long` representation of *obj*.  If *obj* "
 "is not an instance of :c:type:`PyLongObject`, first call its :meth:"
 "`__index__` method (if present) to convert it to a :c:type:`PyLongObject`."
 msgstr ""
-"Retorna una representación de C :c:type:`unsigned long long` de *obj*. Si "
-"*obj* no es una instancia de :c:type:`PyLongObject`, primero llama a su "
-"método :meth:`__index__` o :meth:`__int__` (si está presente) para "
-"convertirlo en un :c:type:`PyLongObject`."
+"Retorna una representación C :c:type:`unsigned long long` de *obj*. Si *obj* "
+"no es una instancia de :c:type:`PyLongObject`, primero llame a su método :"
+"meth:`__index__` (si está presente) para convertirlo en un :c:type:"
+"`PyLongObject`."
 
 #: ../Doc/c-api/long.rst:288
 msgid ""
