--- a/c-api/code.po
+++ b/c-api/code.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
 "PO-Revision-Date: 2021-08-16 13:04+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../Doc/c-api/code.rst:8
@@ -100,6 +100,9 @@ msgid ""
 "``byte_offset`` and ends after it. If you just need the line number of a "
 "frame, use :c:func:`PyFrame_GetLineNumber` instead."
 msgstr ""
+"Retorna el número de línea de la instrucción que se produce en o antes de "
+"``byte_offset`` y finaliza después. Si solo necesita el número de línea de "
+"un marco, use :c:func:`PyFrame_GetLineNumber` en su lugar."
 
 #: ../Doc/c-api/code.rst:60
 msgid ""
@@ -107,3 +110,6 @@ msgid ""
 "API described in PEP 626 <https://www.python.org/dev/peps/pep-0626/#out-of-"
 "process-debuggers-and-profilers>`_."
 msgstr ""
+"Para iterar de manera eficiente sobre los números de línea en un objeto de "
+"código, use `la API descrita en PEP 626 <https://www.python.org/dev/peps/"
+"pep-0626/#out-of-process-debuggers-and-profilers>`_."
