Apply suggestions from code review
Co-authored-by: rtobar <rtobar@icrar.org>

--- a/c-api/init_config.po
+++ b/c-api/init_config.po
@@ -44,7 +44,7 @@ msgid ""
 "environments variables and command line arguments are used to configure "
 "Python."
 msgstr ""
-"El :ref:`Python Configuration <init-python-config>` se puede utilizar para "
+"La :ref:`Configuración de Python <init-python-config>` se puede utilizar para "
 "crear un Python personalizado que se comporte como el Python normal. Por "
 "ejemplo, las variables de entorno y los argumentos de la línea de comandos "
 "se utilizan para configurar Python."
@@ -56,7 +56,7 @@ msgid ""
 "environments variables are ignored, the LC_CTYPE locale is left unchanged "
 "and no signal handler is registered."
 msgstr ""
-"El :ref:`Isolated Configuration <init-isolated-conf>` se puede utilizar para "
+"La :ref:`Configuración Aislada <init-isolated-conf>` se puede utilizar para "
 "incrustar Python en una aplicación. Aísla a Python del sistema. Por ejemplo, "
 "las variables de entorno se ignoran, la configuración regional LC_CTYPE se "
 "deja sin cambios y no se registra ningún manejador de señales."
@@ -276,7 +276,7 @@ msgid ""
 "``PYMEM_ALLOCATOR_NOT_SET`` (``0``): don't change memory allocators (use "
 "defaults)."
 msgstr ""
-"``PYMEM_ALLOCATOR_NOT_SET`` (``0``): no cambia asignadores de memoria (use "
+"``PYMEM_ALLOCATOR_NOT_SET`` (``0``): no cambia asignadores de memoria (usa "
 "los valores predeterminados)"
 
 #: ../Doc/c-api/init_config.rst:233
@@ -284,7 +284,7 @@ msgid ""
 "``PYMEM_ALLOCATOR_DEFAULT`` (``1``): :ref:`default memory allocators "
 "<default-memory-allocators>`."
 msgstr ""
-"``PYMEM_ALLOCATOR_DEFAULT`` (``1``): :ref:`default memory allocators "
+"``PYMEM_ALLOCATOR_DEFAULT`` (``1``): :ref:`asignadores de memoria predeterminados "
 "<default-memory-allocators>`."
 
 #: ../Doc/c-api/init_config.rst:235
@@ -292,13 +292,13 @@ msgid ""
 "``PYMEM_ALLOCATOR_DEBUG`` (``2``): :ref:`default memory allocators <default-"
 "memory-allocators>` with :ref:`debug hooks <pymem-debug-hooks>`."
 msgstr ""
-"``PYMEM_ALLOCATOR_DEBUG`` (``2``): :ref:`default memory allocators <default-"
-"memory-allocators>` con :ref:`debug hooks <pymem-debug-hooks>`."
+"``PYMEM_ALLOCATOR_DEBUG`` (``2``): :ref:`asignadores de memoria predeterminados <default-"
+"memory-allocators>` con :ref:`ganchos de depuración <pymem-debug-hooks>`."
 
 #: ../Doc/c-api/init_config.rst:238
 msgid "``PYMEM_ALLOCATOR_MALLOC`` (``3``): use ``malloc()`` of the C library."
 msgstr ""
-"``PYMEM_ALLOCATOR_MALLOC`` (``3``): use ``malloc()`` de la biblioteca C."
+"``PYMEM_ALLOCATOR_MALLOC`` (``3``): usa ``malloc()`` de la biblioteca C."
 
 #: ../Doc/c-api/init_config.rst:239
 msgid ""
@@ -306,7 +306,7 @@ msgid ""
 "ref:`debug hooks <pymem-debug-hooks>`."
 msgstr ""
 "``PYMEM_ALLOCATOR_MALLOC_DEBUG`` (``4``): fuerza el uso de ``malloc()`` con :"
-"ref:`debug hooks <pymem-debug-hooks>`."
+"ref:`ganchos de depuración <pymem-debug-hooks>`."
 
 #: ../Doc/c-api/init_config.rst:241
 msgid ""
@@ -332,7 +332,7 @@ msgid ""
 "without-pymalloc>`."
 msgstr ""
 "``PYMEM_ALLOCATOR_PYMALLOC`` y ``PYMEM_ALLOCATOR_PYMALLOC_DEBUG`` no son "
-"compatibles si Python es :option:`configured using --without-pymalloc <--"
+"compatibles si Python es :option:`configurado usando --without-pymalloc <--"
 "without-pymalloc>`."
 
 #: ../Doc/c-api/init_config.rst:251
@@ -396,7 +396,7 @@ msgid ""
 "If non-zero, enables the :ref:`Python Development Mode <devmode>`: see :c:"
 "member:`PyConfig.dev_mode`."
 msgstr ""
-"Si es distinto de cero, habilita el :ref:`Python Development Mode "
+"Si es distinto de cero, habilita el :ref:`Modo de desarrollo de Python "
 "<devmode>`: consulte :c:member:`PyConfig.dev_mode`."
 
 #: ../Doc/c-api/init_config.rst:288 ../Doc/c-api/init_config.rst:633
@@ -433,7 +433,7 @@ msgid ""
 "Initialized the from :envvar:`PYTHONLEGACYWINDOWSFSENCODING` environment "
 "variable value."
 msgstr ""
-"Inicializó el valor de la variable de entorno de :envvar:"
+"Inicializado desde valor de variable de entorno :envvar:"
 "`PYTHONLEGACYWINDOWSFSENCODING`."
 
 #: ../Doc/c-api/init_config.rst:307 ../Doc/c-api/init_config.rst:811
@@ -472,7 +472,7 @@ msgid ""
 "Use :ref:`environment variables <using-on-envvars>`? See :c:member:`PyConfig."
 "use_environment`."
 msgstr ""
-"¿Utiliza :ref:`environment variables <using-on-envvars>`? Consulte :c:member:"
+"¿Utiliza :ref:`variables de entorno <using-on-envvars>`? Consulte :c:member:"
 "`PyConfig.use_environment`."
 
 #: ../Doc/c-api/init_config.rst:326 ../Doc/c-api/init_config.rst:1103
@@ -582,7 +582,7 @@ msgid ""
 "For example, the :option:`-X utf8 <-X>` command line option enables the :ref:"
 "`Python UTF-8 Mode <utf8-mode>`."
 msgstr ""
-"Para :ref:`Python Configuration <init-python-config>` (:c:func:"
+"Para :ref:`Configuración de Python <init-python-config>` (:c:func:"
 "`PyPreConfig_InitPythonConfig`), si Python se inicializa con argumentos de "
 "línea de comando, los argumentos de la línea de comando también deben "
 "pasarse para preinicializar Python, ya que tienen un efecto en la "
@@ -650,7 +650,7 @@ msgid ""
 "Initialize configuration with the :ref:`Python Configuration <init-python-"
 "config>`."
 msgstr ""
-"Inicialice la configuración con el :ref:`Python Configuration <init-python-"
+"Inicialice la configuración con la :ref:`Configuración de Python <init-python-"
 "config>`."
 
 #: ../Doc/c-api/init_config.rst:439
@@ -658,7 +658,7 @@ msgid ""
 "Initialize configuration with the :ref:`Isolated Configuration <init-"
 "isolated-conf>`."
 msgstr ""
-"Inicialice la configuración con el :ref:`Isolated Configuration <init-"
+"Inicialice la configuración con la :ref:`Configuración Aislada <init-"
 "isolated-conf>`."
 
 #: ../Doc/c-api/init_config.rst:444
@@ -749,7 +749,7 @@ msgid ""
 "which are in common with :c:type:`PyPreConfig` are tuned, they must be set "
 "before calling a :c:type:`PyConfig` method:"
 msgstr ""
-"La mayoría de ``PyConfig`` métodos :ref:`preinitialize Python <c-preinit>` "
+"La mayoría de los método ``PyConfig`` :ref:`preinitializan Python <c-preinit>` "
 "si es necesario. En ese caso, la configuración de preinicialización de "
 "Python (:c:type:`PyPreConfig`) se basa en :c:type:`PyConfig`. Si se ajustan "
 "los campos de configuración que son comunes con :c:type:`PyPreConfig`, deben "
