--- a/c-api/init_config.po
+++ b/c-api/init_config.po
@@ -44,10 +44,10 @@ msgid ""
 "environments variables and command line arguments are used to configure "
 "Python."
 msgstr ""
-"La :ref:`Configuración de Python <init-python-config>` se puede utilizar para "
-"crear un Python personalizado que se comporte como el Python normal. Por "
-"ejemplo, las variables de entorno y los argumentos de la línea de comandos "
-"se utilizan para configurar Python."
+"La :ref:`Configuración de Python <init-python-config>` se puede utilizar "
+"para crear un Python personalizado que se comporte como el Python normal. "
+"Por ejemplo, las variables de entorno y los argumentos de la línea de "
+"comandos se utilizan para configurar Python."
 
 #: ../Doc/c-api/init_config.rst:22
 msgid ""
@@ -284,16 +284,17 @@ msgid ""
 "``PYMEM_ALLOCATOR_DEFAULT`` (``1``): :ref:`default memory allocators "
 "<default-memory-allocators>`."
 msgstr ""
-"``PYMEM_ALLOCATOR_DEFAULT`` (``1``): :ref:`asignadores de memoria predeterminados "
-"<default-memory-allocators>`."
+"``PYMEM_ALLOCATOR_DEFAULT`` (``1``): :ref:`asignadores de memoria "
+"predeterminados <default-memory-allocators>`."
 
 #: ../Doc/c-api/init_config.rst:235
 msgid ""
 "``PYMEM_ALLOCATOR_DEBUG`` (``2``): :ref:`default memory allocators <default-"
 "memory-allocators>` with :ref:`debug hooks <pymem-debug-hooks>`."
 msgstr ""
-"``PYMEM_ALLOCATOR_DEBUG`` (``2``): :ref:`asignadores de memoria predeterminados <default-"
-"memory-allocators>` con :ref:`ganchos de depuración <pymem-debug-hooks>`."
+"``PYMEM_ALLOCATOR_DEBUG`` (``2``): :ref:`asignadores de memoria "
+"predeterminados <default-memory-allocators>` con :ref:`ganchos de depuración "
+"<pymem-debug-hooks>`."
 
 #: ../Doc/c-api/init_config.rst:238
 msgid "``PYMEM_ALLOCATOR_MALLOC`` (``3``): use ``malloc()`` of the C library."
@@ -650,8 +651,8 @@ msgid ""
 "Initialize configuration with the :ref:`Python Configuration <init-python-"
 "config>`."
 msgstr ""
-"Inicialice la configuración con la :ref:`Configuración de Python <init-python-"
-"config>`."
+"Inicialice la configuración con la :ref:`Configuración de Python <init-"
+"python-config>`."
 
 #: ../Doc/c-api/init_config.rst:439
 msgid ""
@@ -749,11 +750,12 @@ msgid ""
 "which are in common with :c:type:`PyPreConfig` are tuned, they must be set "
 "before calling a :c:type:`PyConfig` method:"
 msgstr ""
-"La mayoría de los método ``PyConfig`` :ref:`preinitializan Python <c-preinit>` "
-"si es necesario. En ese caso, la configuración de preinicialización de "
-"Python (:c:type:`PyPreConfig`) se basa en :c:type:`PyConfig`. Si se ajustan "
-"los campos de configuración que son comunes con :c:type:`PyPreConfig`, deben "
-"establecerse antes de llamar a un método :c:type:`PyConfig`:"
+"La mayoría de los método ``PyConfig`` :ref:`preinitializan Python <c-"
+"preinit>` si es necesario. En ese caso, la configuración de "
+"preinicialización de Python (:c:type:`PyPreConfig`) se basa en :c:type:"
+"`PyConfig`. Si se ajustan los campos de configuración que son comunes con :c:"
+"type:`PyPreConfig`, deben establecerse antes de llamar a un método :c:type:"
+"`PyConfig`:"
 
 #: ../Doc/c-api/init_config.rst:506
 msgid ":c:member:`PyConfig.dev_mode`"
