pending fuzzy fix reference/executionmodel.po reference/gramma.po

--- a/reference/grammar.po
+++ b/reference/grammar.po
@@ -37,7 +37,6 @@ msgstr ""
 "de código y la recuperación de errores."
 
 #: ../Doc/reference/grammar.rst:9
-#, fuzzy, python-format
 msgid ""
 "The notation is a mixture of `EBNF <https://en.wikipedia.org/wiki/"
 "Extended_Backus%E2%80%93Naur_form>`_ and `PEG <https://en.wikipedia.org/wiki/"
@@ -51,16 +50,8 @@ msgstr ""
 "La notación es una mezcla de `EBNF <https://es.wikipedia.org/wiki/"
 "BNF_extendido>`_ y `PEG <https://en.wikipedia.org/wiki/"
 "Parsing_expression_grammar>`_. En particular, ``&`` seguido de un símbolo, "
-"ficha o grupo entre paréntesis indica una anticipación positiva (es decir, "
+"token o grupo entre paréntesis indica una anticipación positiva (es decir, "
 "se requiere que coincida pero no se consume), mientras que ``!`` Indica una "
-"anticipación negativa (es decir, se requiere _no_ para partido). Usamos el "
+"anticipación negativa (es decir, se requiere _no_ para coincidir). Usamos el "
 "separador ``|`` para referirnos a la \"elección ordenada\" de PEG (escrito "
 "como ``/`` en las gramáticas tradicionales de PEG)."
-
-#~ msgid ""
-#~ "This is the full Python grammar, as it is read by the parser generator "
-#~ "and used to parse Python source files:"
-#~ msgstr ""
-#~ "Esta es la gramática completa de Python, tal y como es leída por el "
-#~ "generador de análisis sintáctico usado para analizar sintácticamente "
-#~ "archivos fuentes de Python:"
